--- a/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
+++ b/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
@@ -81,10 +81,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\IValidationRuleResult.cs" />
+    <Compile Include="Validation\Rules\LocalizableValidationRuleBase.cs" />
+    <Compile Include="Validation\Rules\ValidationRuleBase.cs" />
+    <Compile Include="Validation\DefaultSequentialRuleValidator.cs" />
+    <Compile Include="Validation\Rules\ValidationRuleResult.cs" />
+    <Compile Include="Validation\IValidationError.cs" />
+    <Compile Include="Validation\IValidationMessage.cs" />
+    <Compile Include="Validation\IValidationResult.cs" />
+    <Compile Include="Validation\IValidationRule.cs" />
+    <Compile Include="Validation\IValidationWarning.cs" />
+    <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Extensions\StringValidationMessageExtensions.cs" />
+    <Compile Include="Validation\ValidationError.cs" />
+    <Compile Include="Validation\ValidationResult.cs" />
+    <Compile Include="Validation\ValidationWarning.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Medidata.Cloud.Tsdv.Loader.nuspec" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="_CreateNewNuGetPackage\Config.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\New-NuGetPackage.ps1" />
@@ -93,6 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="_CreateNewNuGetPackage\DoNotModify\NuGet.exe" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ExcelXmlLoader\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
