--- a/Medidata.Cloud.Tsdv.Loader/packages.config
+++ b/Medidata.Cloud.Tsdv.Loader/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
-  <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.8" targetFramework="net40" developmentDependency="true" />
+  <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.8" targetFramework="net40"
+           developmentDependency="true" />
   <package id="Dapper" version="1.8" targetFramework="net40" />
   <package id="DapperWrapper" version="0.3.0.0" targetFramework="net40" />
   <package id="Medidata.Interfaces" version="0.1.0" targetFramework="net40" />
