--- a/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
+++ b/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\DapperWrapper.0.3.0.0\lib\net40\DapperWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ImpromptuInterface, Version=6.2.2.0, Culture=neutral, PublicKeyToken=0b1781c923b2975b, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Medidata.Interfaces, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Medidata.Interfaces.0.1.0\lib\net40\Medidata.Interfaces.dll</HintPath>
       <Private>True</Private>
@@ -80,6 +84,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModelConverters\BlockPlanConverter.cs" />
+    <Compile Include="Models\BlockPlanModel.cs" />
+    <Compile Include="IWorkbookModelBuilder.cs" />
+    <Compile Include="IWorksheetModelBuilder.cs" />
+    <Compile Include="ModelConverterFactory.cs" />
+    <Compile Include="IModelConverterFactory.cs" />
+    <Compile Include="IModelConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\IValidationRuleResult.cs" />
     <Compile Include="Validation\Rules\LocalizableValidationRuleBase.cs" />
@@ -96,6 +107,8 @@
     <Compile Include="Validation\ValidationError.cs" />
     <Compile Include="Validation\ValidationResult.cs" />
     <Compile Include="Validation\ValidationWarning.cs" />
+    <Compile Include="WorkbookModelBuilder.cs" />
+    <Compile Include="WorksheetModelBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Medidata.Cloud.Tsdv.Loader.nuspec" />
@@ -114,6 +127,7 @@
   <ItemGroup>
     <Folder Include="ExcelXmlLoader\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
