--- a/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
+++ b/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
@@ -43,8 +43,8 @@
       <HintPath>..\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Medidata.Interfaces, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Medidata.Interfaces.0.1.0\lib\net40\Medidata.Interfaces.dll</HintPath>
+    <Reference Include="Medidata.Interfaces, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Medidata.Interfaces.0.1.1\lib\net40\Medidata.Interfaces.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -124,9 +124,7 @@
   <ItemGroup>
     <None Include="_CreateNewNuGetPackage\DoNotModify\NuGet.exe" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ExcelXmlLoader\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
