--- a/Medidata.Cloud.Tsdv.Loader.Tests/Medidata.Cloud.Tsdv.Loader.Tests.csproj
+++ b/Medidata.Cloud.Tsdv.Loader.Tests/Medidata.Cloud.Tsdv.Loader.Tests.csproj
@@ -43,6 +43,10 @@
       <HintPath>..\packages\DapperWrapper.0.3.0.0\lib\net40\DapperWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Medidata.Interfaces, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Medidata.Interfaces.0.1.1\lib\net40\Medidata.Interfaces.dll</HintPath>
       <Private>True</Private>
@@ -103,8 +107,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Helpers\FakeClass.cs" />
+    <Compile Include="Helpers\FakeModel.cs" />
+    <Compile Include="Helpers\FakeNotImplClass.cs" />
+    <Compile Include="Helpers\IFakeInterface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DefaultSequentialRuleValidatorTests.cs" />
+    <Compile Include="PropNameMatchBaseConverterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
