--- a/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
+++ b/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\DapperWrapper.0.3.0.0\lib\net40\DapperWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ImpromptuInterface, Version=6.2.2.0, Culture=neutral, PublicKeyToken=0b1781c923b2975b, processorArchitecture=MSIL">
       <HintPath>..\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
       <Private>True</Private>
@@ -84,10 +88,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOpenXmlWorkbookParser.cs" />
+    <Compile Include="IOpenXmlWorksheetParser.cs" />
     <Compile Include="ModelConverters\BlockPlanConverter.cs" />
+    <Compile Include="ModelConverters\MatchedPropertyInfo.cs" />
+    <Compile Include="ModelConverters\PropNameMatchBaseConverter.cs" />
+    <Compile Include="ModelConverters\TierFormConverter.cs" />
+    <Compile Include="Models\TierFormModel.cs" />
     <Compile Include="Models\BlockPlanModel.cs" />
-    <Compile Include="IWorkbookModelBuilder.cs" />
-    <Compile Include="IWorksheetModelBuilder.cs" />
+    <Compile Include="IOpenXmlWorkbookBuilder.cs" />
+    <Compile Include="IOpenXmlWorksheetBuilder.cs" />
     <Compile Include="ModelConverterFactory.cs" />
     <Compile Include="IModelConverterFactory.cs" />
     <Compile Include="IModelConverter.cs" />
@@ -107,8 +117,10 @@
     <Compile Include="Validation\ValidationError.cs" />
     <Compile Include="Validation\ValidationResult.cs" />
     <Compile Include="Validation\ValidationWarning.cs" />
-    <Compile Include="WorkbookModelBuilder.cs" />
-    <Compile Include="WorksheetModelBuilder.cs" />
+    <Compile Include="OpenXmlWorkbookBuilder.cs" />
+    <Compile Include="OpenXmlWorkbookParser.cs" />
+    <Compile Include="OpenXmlWorksheetBuilder.cs" />
+    <Compile Include="OpenXmlWorksheetParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Medidata.Cloud.Tsdv.Loader.nuspec" />
