--- a/Medidata.Cloud.Tsdv.Loader.Tests/Medidata.Cloud.Tsdv.Loader.Tests.csproj
+++ b/Medidata.Cloud.Tsdv.Loader.Tests/Medidata.Cloud.Tsdv.Loader.Tests.csproj
@@ -93,6 +93,12 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.1.0.20105.408\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="YAXLib, Version=2.13.0.0, Culture=neutral, PublicKeyToken=7cc39f8266ad1835, processorArchitecture=MSIL">
+      <HintPath>..\packages\YAXLib.2.13\lib\YAXLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -107,13 +113,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Helpers\FakeClass.cs" />
+    <Compile Include="Helpers\FakeInterfaceClass.cs" />
     <Compile Include="Helpers\FakeModel.cs" />
     <Compile Include="Helpers\FakeNotImplClass.cs" />
     <Compile Include="Helpers\IFakeInterface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DefaultSequentialRuleValidatorTests.cs" />
-    <Compile Include="PropNameMatchBaseConverterTests.cs" />
+    <Compile Include="UserExperience.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
