--- a/Medidata.Cloud.Tsdv.Loader.Tests/packages.config
+++ b/Medidata.Cloud.Tsdv.Loader.Tests/packages.config
@@ -12,4 +12,5 @@
   <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6" targetFramework="net45" />
+  <package id="YAXLib" version="2.13" targetFramework="net45" />
 </packages>
