--- a/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
+++ b/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
@@ -89,29 +89,34 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\WorksheetBuilderHelper.cs" />
+    <Compile Include="CellValueConverters\BooleanConverter.cs" />
+    <Compile Include="CellValueConverters\CellTypeConverterManager.cs" />
     <Compile Include="Builders\CoverWorksheetBuilder.cs" />
+    <Compile Include="CellValueConverters\CellValueBaseConverter.cs" />
+    <Compile Include="CellValueConverters\DateTimeConverter.cs" />
+    <Compile Include="CellValueConverters\DecimalConverter.cs" />
+    <Compile Include="CellValueConverters\DoubleConverter.cs" />
+    <Compile Include="CellValueConverters\FloatConverter.cs" />
+    <Compile Include="CellValueConverters\ICellValueConverter.cs" />
+    <Compile Include="CellValueConverters\InlineStringConverter.cs" />
+    <Compile Include="CellValueConverters\IntConverter.cs" />
+    <Compile Include="CellValueConverters\LongConverter.cs" />
+    <Compile Include="CellValueConverters\NullableBooleanConverter.cs" />
+    <Compile Include="CellValueConverters\NullableDateTimeConverter.cs" />
+    <Compile Include="CellValueConverters\NumberConverter.cs" />
+    <Compile Include="CellValueConverters\StringConverter.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="Parsers\IWorkbookParser.cs" />
     <Compile Include="Parsers\IWorksheetParser.cs" />
-    <Compile Include="ModelConverters\BlockPlanConverter.cs" />
-    <Compile Include="ModelConverters\BlockPlanSettingConverter.cs" />
     <Compile Include="Models\BlockPlanSettingModel.cs" />
-    <Compile Include="ModelConverters\CustomTierConverter.cs" />
     <Compile Include="Models\CustomTierModel.cs" />
-    <Compile Include="ModelConverters\ExcludedStatusConverter.cs" />
     <Compile Include="Models\ExcludeStatusModel.cs" />
-    <Compile Include="ModelConverters\MatchedPropertyInfo.cs" />
-    <Compile Include="ModelConverters\PropNameMatchBaseConverter.cs" />
-    <Compile Include="ModelConverters\RuleConverter.cs" />
     <Compile Include="Models\RuleModel.cs" />
-    <Compile Include="ModelConverters\TierFormConverter.cs" />
     <Compile Include="Models\TierFormModel.cs" />
     <Compile Include="Models\BlockPlanModel.cs" />
-    <Compile Include="Builders\IWorkbookBuilder.cs" />
+    <Compile Include="Builders\ISpreadsheetBuilder.cs" />
     <Compile Include="Builders\IWorksheetBuilder.cs" />
-    <Compile Include="ModelConverterFactory.cs" />
-    <Compile Include="IModelConverterFactory.cs" />
-    <Compile Include="IModelConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -133,7 +138,7 @@
     <Compile Include="Validation\ValidationError.cs" />
     <Compile Include="Validation\ValidationResult.cs" />
     <Compile Include="Validation\ValidationWarning.cs" />
-    <Compile Include="Builders\WorkbookBuilder.cs" />
+    <Compile Include="Builders\SpreadsheetBuilder.cs" />
     <Compile Include="Parsers\WorkbookParser.cs" />
     <Compile Include="Builders\WorksheetBuilder.cs" />
     <Compile Include="Parsers\WorksheetParser.cs" />
