--- a/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
+++ b/Medidata.Cloud.Tsdv.Loader/Medidata.Cloud.Tsdv.Loader.csproj
@@ -89,7 +89,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builders\WorksheetBuilderHelper.cs" />
     <Compile Include="CellValueConverters\BooleanConverter.cs" />
     <Compile Include="CellValueConverters\CellTypeConverterManager.cs" />
     <Compile Include="Builders\CoverWorksheetBuilder.cs" />
@@ -117,6 +116,7 @@
     <Compile Include="Models\BlockPlanModel.cs" />
     <Compile Include="Builders\ISpreadsheetBuilder.cs" />
     <Compile Include="Builders\IWorksheetBuilder.cs" />
+    <Compile Include="Helpers\SpreadsheetAttributeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
