--- a/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
+++ b/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\DapperWrapper.0.3.0.0\lib\net40\DapperWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Medidata.Interfaces, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Medidata.Interfaces.0.1.1\lib\net40\Medidata.Interfaces.dll</HintPath>
       <Private>True</Private>
@@ -77,27 +81,33 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LocalizedExcelBuilder.cs" />
+    <Compile Include="TsdvReportExcelBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\StringValidationMessageExtensions.cs" />
-    <Compile Include="SheetModels\BlockPlan.cs" />
-    <Compile Include="SheetModels\BlockPlanSetting.cs" />
-    <Compile Include="SheetModels\CustomTier.cs" />
-    <Compile Include="SheetModels\ExcludedStatus.cs" />
-    <Compile Include="SheetInterfaces\IBlockPlan.cs" />
-    <Compile Include="SheetInterfaces\IBlockPlanSetting.cs" />
-    <Compile Include="SheetInterfaces\ICustomTier.cs" />
-    <Compile Include="SheetInterfaces\IExcludedStatus.cs" />
-    <Compile Include="SheetInterfaces\IRule.cs" />
-    <Compile Include="SheetInterfaces\ITierField.cs" />
-    <Compile Include="SheetInterfaces\ITierFolder.cs" />
-    <Compile Include="SheetInterfaces\ITierForm.cs" />
-    <Compile Include="SheetModels\Rule.cs" />
-    <Compile Include="SheetModels\TierField.cs" />
-    <Compile Include="SheetModels\TierFolder.cs" />
-    <Compile Include="SheetModels\TierForm.cs" />
+    <Compile Include="Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Presentations\Models\BlockPlan.cs" />
+    <Compile Include="Presentations\Models\BlockPlanSetting.cs" />
+    <Compile Include="Presentations\Models\CustomTier.cs" />
+    <Compile Include="Presentations\Models\ExcludedStatus.cs" />
+    <Compile Include="Presentations\Interfaces\IBlockPlan.cs" />
+    <Compile Include="Presentations\Interfaces\IBlockPlanSetting.cs" />
+    <Compile Include="Presentations\Interfaces\ICustomTier.cs" />
+    <Compile Include="Presentations\Interfaces\IExcludedStatus.cs" />
+    <Compile Include="Presentations\Interfaces\IRule.cs" />
+    <Compile Include="Presentations\Interfaces\ITierField.cs" />
+    <Compile Include="Presentations\Interfaces\ITierFolder.cs" />
+    <Compile Include="Presentations\Interfaces\ITierForm.cs" />
+    <Compile Include="Presentations\Models\Rule.cs" />
+    <Compile Include="Presentations\Models\TierField.cs" />
+    <Compile Include="Presentations\Models\TierFolder.cs" />
+    <Compile Include="Presentations\Models\TierForm.cs" />
     <Compile Include="Validation\DefaultSequentialRuleValidator.cs" />
     <Compile Include="Validation\IValidationError.cs" />
     <Compile Include="Validation\IValidationMessage.cs" />
@@ -116,6 +126,7 @@
   <ItemGroup>
     <None Include="Medidata.Rave.Tsdv.Loader.nuspec" />
     <None Include="packages.config" />
+    <None Include="Resources\CoverSheet.xlsx" />
     <None Include="_CreateNewNuGetPackage\Config.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\New-NuGetPackage.ps1" />
@@ -130,6 +141,12 @@
       <Project>{9B06A417-162E-45D4-AD93-7E274857599C}</Project>
       <Name>Medidata.Cloud.ExcelLoader</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
