--- a/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
+++ b/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
@@ -88,7 +88,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TsdvReportExcelBuilder.cs" />
+    <Compile Include="Helpers\ListExtensions.cs" />
+    <Compile Include="ITsdvReportLoader.cs" />
+    <Compile Include="SheetDefinitions\v1\TsdvReportV1Loader.cs" />
+    <Compile Include="SheetDefinitions\TsdvReportGenericBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\StringValidationMessageExtensions.cs" />
     <Compile Include="Resource.Designer.cs">
@@ -96,14 +99,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
-    <Compile Include="SheetSharps\IBlockPlan.cs" />
-    <Compile Include="SheetSharps\IBlockPlanSetting.cs" />
-    <Compile Include="SheetSharps\ICustomTier.cs" />
-    <Compile Include="SheetSharps\IExcludedStatus.cs" />
-    <Compile Include="SheetSharps\IRule.cs" />
-    <Compile Include="SheetSharps\ITierField.cs" />
-    <Compile Include="SheetSharps\ITierFolder.cs" />
-    <Compile Include="SheetSharps\ITierForm.cs" />
+    <Compile Include="SheetDefinitions\v1\IBlockPlan.cs" />
+    <Compile Include="SheetDefinitions\v1\IBlockPlanSetting.cs" />
+    <Compile Include="SheetDefinitions\v1\ICustomTier.cs" />
+    <Compile Include="SheetDefinitions\v1\IExcludedStatus.cs" />
+    <Compile Include="SheetDefinitions\v1\IRule.cs" />
+    <Compile Include="SheetDefinitions\v1\ITierField.cs" />
+    <Compile Include="SheetDefinitions\v1\ITierFolder.cs" />
+    <Compile Include="SheetDefinitions\v1\ITierForm.cs" />
     <Compile Include="Validation\DefaultSequentialRuleValidator.cs" />
     <Compile Include="Validation\IValidationError.cs" />
     <Compile Include="Validation\IValidationMessage.cs" />
