--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
@@ -45,6 +45,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CellStyleProviders\CellStyleIdentifier.cs" />
+    <Compile Include="CellStyleProviders\ExtractedCellStyleProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CellTypeConverters\BooleanConverter.cs" />
     <Compile Include="CellTypeValueConverterFactory.cs" />
     <Compile Include="CellTypeConverters\CellTypeValueBaseConverter.cs" />
@@ -66,6 +70,7 @@
     <Compile Include="IExcelBuilder.cs" />
     <Compile Include="ISheetBuilder.cs" />
     <Compile Include="Helpers\SpreadsheetAttributeHelper.cs" />
+    <Compile Include="ICellStyleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExcelBuilder.cs" />
     <Compile Include="ExcelParser.cs" />
