--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
@@ -56,7 +56,6 @@
     <Compile Include="CellTypeConverters\DoubleConverter.cs" />
     <Compile Include="CellTypeConverters\FloatConverter.cs" />
     <Compile Include="CellTypeConverters\ICellTypeValueConverter.cs" />
-    <Compile Include="Helpers\ExcelBuilderExtensions.cs" />
     <Compile Include="ISheetBuilderDecorator.cs" />
     <Compile Include="Helpers\ListExtensions.cs" />
     <Compile Include="Helpers\SheetBuilderExtensions.cs" />
@@ -87,6 +86,7 @@
     <Compile Include="SheetDecorators\TextStyleSheetDecorator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExcelParser.cs" />
+    <Compile Include="SheetDefinition.cs" />
     <Compile Include="SheetParser.cs" />
     <Compile Include="Validations\DefaultSequentialRuleValidator.cs" />
     <Compile Include="Validations\IValidationError.cs" />
