--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
@@ -45,6 +45,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColumnBuilder.cs" />
+    <Compile Include="Helpers\IExtraProperty.cs" />
+    <Compile Include="Helpers\ObjectExtensions.cs" />
+    <Compile Include="SheetDecorators\ExpandoObjectSheetDecorator.cs" />
+    <Compile Include="SheetDefinitions\ColumnHeaderNameAttribute.cs" />
+    <Compile Include="SheetDefinitions\ColumnIngoredAttribute.cs" />
+    <Compile Include="SheetDefinitions\SheetDefinitionModelBase.cs" />
     <Compile Include="Helpers\CellStyleProvider.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -88,6 +95,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExcelParser.cs" />
     <Compile Include="SheetDefinition.cs" />
+    <Compile Include="SheetDefinitions\SheetNameAttribute.cs" />
     <Compile Include="SheetParser.cs" />
     <Compile Include="Validations\DefaultSequentialRuleValidator.cs" />
     <Compile Include="Validations\IValidationError.cs" />
