--- a/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
+++ b/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
@@ -54,8 +54,8 @@
   <ItemGroup>
     <Compile Include="ITsdvReportLoader.cs" />
     <Compile Include="SheetDefinitions\v1\BlockPlan.cs" />
-    <Compile Include="SheetDefinitions\v1\TranslateHeaderDecorator.cs" />
-    <Compile Include="SheetDefinitions\v1\TsdvReportLoader.cs" />
+    <Compile Include="SheetDefinitions\TranslateHeaderDecorator.cs" />
+    <Compile Include="SheetDefinitions\TsdvReportLoader.cs" />
     <Compile Include="TemplatedExcelBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs">
@@ -64,12 +64,12 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Compile Include="SheetDefinitions\v1\BlockPlanSetting.cs" />
-    <Compile Include="SheetDefinitions\v1\ICustomTier.cs" />
-    <Compile Include="SheetDefinitions\v1\IExcludedStatus.cs" />
-    <Compile Include="SheetDefinitions\v1\IRule.cs" />
-    <Compile Include="SheetDefinitions\v1\ITierField.cs" />
+    <Compile Include="SheetDefinitions\v1\CustomTier.cs" />
+    <Compile Include="SheetDefinitions\v1\ExcludedStatus.cs" />
+    <Compile Include="SheetDefinitions\v1\Rule.cs" />
+    <Compile Include="SheetDefinitions\v1\TierField.cs" />
     <Compile Include="SheetDefinitions\v1\TierFolder.cs" />
-    <Compile Include="SheetDefinitions\v1\ITierForm.cs" />
+    <Compile Include="SheetDefinitions\v1\TierForm.cs" />
     <Compile Include="Validations\Rules\LocalizableValidationRuleBase.cs" />
   </ItemGroup>
   <ItemGroup>
