Remove unused code

--- a/Medidata.Rave.Tsdv.Loader.Sample/unity.config
+++ b/Medidata.Rave.Tsdv.Loader.Sample/unity.config
@@ -32,15 +32,12 @@
         <param name="converterFactory" dependencyName="converterFactory" />
         <param name="decorators">
           <array>
-            <dependency
-              type="Medidata.Cloud.ExcelLoader.SheetDecorators.HeaderSheetDecorator, Medidata.Cloud.ExcelLoader" />
-            <dependency
-              type="Medidata.Cloud.ExcelLoader.SheetDecorators.AutoFilterSheetDecorator, Medidata.Cloud.ExcelLoader" />
+            <dependency type="Medidata.Cloud.ExcelLoader.SheetDecorators.HeaderSheetDecorator, Medidata.Cloud.ExcelLoader" />
+            <dependency type="Medidata.Cloud.ExcelLoader.SheetDecorators.AutoFilterSheetDecorator, Medidata.Cloud.ExcelLoader" />
             <dependency name="textStyleDecorator" />
             <dependency name="headerStyleDecorator" />
             <dependency type="Medidata.Rave.Tsdv.Loader.TranslateHeaderDecorator, Medidata.Rave.Tsdv.Loader" />
-            <dependency
-              type="Medidata.Cloud.ExcelLoader.SheetDecorators.AutoFitWidthSheetDecorator, Medidata.Cloud.ExcelLoader" />
+            <dependency type="Medidata.Cloud.ExcelLoader.SheetDecorators.AutoFitWidthSheetDecorator, Medidata.Cloud.ExcelLoader" />
           </array>
         </param>
 
