--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.nuspec
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.nuspec
@@ -3,14 +3,14 @@
 <package>
   <metadata>
     <id>Medidata.Cloud.ExcelLoader</id>
-    <version>0.1.2</version>
+    <version>0.1.3</version>
     <title>Medidata.Cloud.ExcelLoader</title>
     <authors>jshao@mdsol.com,echen@mdsol.com,chuang@mdsol.com</authors>
     <owners>jshao@mdsol.com,echen@mdsol.com,chuang@mdsol.com</owners>
     <projectUrl>https://github.com/junshao/Medidata.Cloud.Tsdv.Loader</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Medidata Excel builder and parser for unloading and downloading</description>
-    <releaseNotes>Added dynamic column feature and new loader APIs.</releaseNotes>
+    <releaseNotes>Better experience for APIs.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>Excel builder parser loader</tags>
     <dependencies>
