Able to change copyright text on cover sheet based on AssemblyCopyrightAttribute

--- a/Medidata.Rave.Tsdv.Loader.Sample/unity.config
+++ b/Medidata.Rave.Tsdv.Loader.Sample/unity.config
@@ -45,7 +45,7 @@
     <register type="Medidata.Cloud.ExcelLoader.ISheetParser, Medidata.Cloud.ExcelLoader"
               mapTo="Medidata.Cloud.ExcelLoader.SheetParser, Medidata.Cloud.ExcelLoader" />
     <register type="Medidata.Cloud.ExcelLoader.IExcelBuilder, Medidata.Cloud.ExcelLoader"
-              mapTo="Medidata.Rave.Tsdv.Loader.CoveredExcelBuilder, Medidata.Rave.Tsdv.Loader" />
+              mapTo="Medidata.Rave.Tsdv.Loader.AutoCopyrightCoveredExcelBuilder, Medidata.Rave.Tsdv.Loader" />
     <register type="Medidata.Cloud.ExcelLoader.IExcelParser, Medidata.Cloud.ExcelLoader"
               mapTo="Medidata.Cloud.ExcelLoader.ExcelParser, Medidata.Cloud.ExcelLoader" />
 
