Add MdsolVersionSheetDecorator to remember the version of Tsdv loader that the sheet was created by

--- a/Medidata.Rave.Tsdv.Loader.Sample/unity.config
+++ b/Medidata.Rave.Tsdv.Loader.Sample/unity.config
@@ -36,6 +36,7 @@
             <dependency name="textStyleDecorator" />
             <dependency name="headerStyleDecorator" />
             <dependency type="Medidata.Rave.Tsdv.Loader.TranslateHeaderDecorator, Medidata.Rave.Tsdv.Loader" />
+            <dependency type="Medidata.Rave.Tsdv.Loader.MdsolVersionSheetDecorator, Medidata.Rave.Tsdv.Loader" />
             <dependency type="Medidata.Cloud.ExcelLoader.SheetDecorators.AutoFitColumnSheetDecorator, Medidata.Cloud.ExcelLoader" />
           </array>
         </param>
