--- a/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
+++ b/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoCopyrightCoveredExcelBuilder.cs" />
+    <Compile Include="MdsolVersionSheetDecorator.cs" />
     <Compile Include="SheetDefinitions\v1\BlockPlan.cs" />
     <Compile Include="TranslateHeaderDecorator.cs" />
     <Compile Include="TsdvExcelLoader.cs" />
