Increment version (ExcelLoader to 0.1.5 and Tsdv.Loader to 0.1.6)

--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.nuspec
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.nuspec
@@ -3,14 +3,14 @@
 <package>
   <metadata>
     <id>Medidata.Cloud.ExcelLoader</id>
-    <version>0.1.4</version>
+    <version>0.1.5</version>
     <title>Medidata.Cloud.ExcelLoader</title>
     <authors>jshao@mdsol.com,echen@mdsol.com,chuang@mdsol.com</authors>
     <owners>jshao@mdsol.com,echen@mdsol.com,chuang@mdsol.com</owners>
     <projectUrl>https://github.com/junshao/Medidata.Cloud.Tsdv.Loader</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Medidata Excel builder and parser for unloading and downloading</description>
-    <releaseNotes>New APIs and sheet decrorator chain.</releaseNotes>
+    <releaseNotes>Add column width auto fit feature and XML namespace improvement.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>Excel builder parser loader</tags>
     <dependencies>
